--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
-          SETTING_JSON: profile-3d-contrib/*.json
+          SETTING_JSON: profile-3d-contrib/setting.json
       - name: Commit & Push
         run: |
           git config user.name github-actions
